--- a/src/assets/scss/components/_Ghostman.scss
+++ b/src/assets/scss/components/_Ghostman.scss
@@ -74,7 +74,7 @@
             width: 100%;
 			padding: 3rem 3rem;
 			grid-template-columns: 100%;
-			grid-template-rows: 50% 50%;
+			grid-template-rows: 60% 40%;
     }
 
     // 1st of the two main containers -----------------------------------------
@@ -102,7 +102,6 @@
             @include mixin.breakpoint(sm) {
                 max-height: 90%;
                 max-width: 100%;
-                margin-top: 5rem;
             }
         }
     }
@@ -178,7 +177,7 @@
         margin-bottom: 4rem;
 				
 				@include mixin.breakpoint(sm) {
-					margin-bottom: 0;
+					margin-bottom: 2rem;
 					width: 90%;
 				}
     }
